# htmx-web-services-poc

./: .gitignore  README.md  docker-compose.yaml  go.work  go.work.sum
aladin-service/: Dockerfile  go.mod  main.go
aladin-service/templates/: aladin.html
dbinit/: Dockerfile  go.mod  main.go
htmx-root/: Dockerfile  README.md  pyproject.toml
htmx-root/src/app/: main.py  routes.py
htmx-root/src/static/css/: main.css
htmx-root/src/templates/: main.html
htmx-root/src/templates/shared/: _base.html  _header.html
lightcurve-service/: Dockerfile  go.mod  main.go
lightcurve-service/api/: api.go  output.go  rest.go  web.go
lightcurve-service/core/: dto.go  service.go  service_test.go
lightcurve-service/dbconn/: sql.go
lightcurve-service/static/: lightcurvePlot.js
lightcurve-service/templates/: plot.html  plot.tmpl
object-service/: Dockerfile  go.mod  go.sum  main.go
object-service/api/: api.go  rest.go  web.go
object-service/core/: dto.go  service.go
object-service/dbconn/: sql.go
object-service/static/css/: main.css
object-service/templates/: dec_deg.html  dec_dms.html  greg_mjd.html  mjd_greg.html  object_details.html  ra_deg.html  ra_hms.html
