[tool.poetry]
name = "htmx-root"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.black]
linelength = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
